tests/types_first_function_statics5/types_first_function_statics5.exp
Error -------------------------------------------------------------------------------------------------------- b.js:2:21

Cannot call `foo.call` with empty string bound to `x` because string [1] is incompatible with number [2].
[incompatible-call]

   b.js:2:21
   2| foo.call(undefined, "");
                          ^^ [1]

References:
   a.js:1:17
   1| function foo(x: number) {}
                      ^^^^^^ [2]



Found 1 error
